customize profile /profile/edit page. Bug whis save file - 'The www.webfish.local page isn’t working'

--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,22 +1,27 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
-    {{ dump(form) }}
-    <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
-    </div>
+    {{ dump(form.vars.value) }}
+<ul>
+  <li>{{ form_row(form.email) }}</li>
+  <li>{{ form_row(form.username) }}</li>
+  <li>{{ form_row(form.name) }}</li>
+  <li>{{ form_row(form.soname) }}</li>
+  <li>{{ form_row(form.age) }}</li>
+  <li>{{ form_row(form.city) }}</li>
+  <ul>
+    <li>
+      Add new image - {{ form_row(form.img) }}
+    </li>
+    <li>
+      <img src="{{ asset('user_images/' ~ form.vars.value.img ) }}" alt="{{ form.vars.value.username }}'s img"/>
+    </li>
+  </ul>
 
-{#<ul>#}
-    {#<li>{{ form_row(form.email) }}</li>#}
-    {#<li>{{ form_row(form.username) }}</li>#}
-    {#<li>{{ form_row(form.name) }}</li>#}
-    {#<li>{{ form_row(form.soname) }}</li>#}
-    {#<li>{{ form_row(form.age) }}</li>#}
-    {#<li>{{ form_row(form.city) }}</li>#}
-{#</ul>#}
+  <li>{{ form_row(form.current_password) }}</li>
+</ul>
 
-{#<div>#}
-    {#<input type="submit" value="{{ 'profile.edit.submit'|trans }}" class="active"/>#}
-    {#<input type="reset" value="Clean"/>#}
-{#</div>#}
+<div>
+  <input type="submit" value="{{ 'profile.edit.submit'|trans }}" class="active"/>
+</div>
 {{ form_end(form) }}
