--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,5 +1,5 @@
-{% extends "MainBundle::blog.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-    {{ include('FOSUserBundle:Security:login_content.html.twig') }}
+  {% include "FOSUserBundle:Security:login_content.html.twig" %}
 {% endblock fos_user_content %}
