--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -12,8 +12,7 @@
     {% endif %}
 
     <label class="label" for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Name"
-           required="required"/>
+    <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Name" required="required"/>
 
     <label class="label" for="password">{{ 'security.login.password'|trans }}</label>
     <input type="password" id="password" name="_password" required="required" placeholder="Password"/>
@@ -26,9 +25,6 @@
     or
 
     <a href="{{ path('fos_user_registration_register') }}">
-
         Register
-
     </a>
-
 </form>
