--- a/web/assets/src/scss/variables/_color.scss
+++ b/web/assets/src/scss/variables/_color.scss
@@ -1,5 +1,5 @@
 //== Default colors ==//
-$whit: #ffffff;
+$white: #ffffff;
 $black: #000000;
 
 //== Theme colors ==//
@@ -7,4 +7,6 @@ $black: #000000;
 //text colors
 
 //background colors
-
+$black-light: #243238;
+$blue-light: #3D525B;
+$white-coffee: #f1f1f1;
