--- a/web/assets/src/scss/Component/_mmenu.scss
+++ b/web/assets/src/scss/Component/_mmenu.scss
@@ -20,7 +20,7 @@
 
 	#mmenu-user-content {
 	  padding-top: rem(20px);
-	  display: block;
+	  display: none;
 	  position: absolute;
 	  width: 100%;
 
