--- a/src/MainBundle/Resources/views/Component/mainmenu.html.twig
+++ b/src/MainBundle/Resources/views/Component/mainmenu.html.twig
@@ -1,36 +1,41 @@
 <div id="mmenu" class="mmenu">
-    <div class="mmenu-container">
-        <div class="mmenu-navigation">
-            {{ knp_menu_render('MainBundle:Builder:mainMenu') }}
-        </div>
-        <div id="mmenu-user" class="mmenu-user">
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <p class="user-title">{{ app.user.username }} <img src="{{ asset('user_images/' ~ app.user.img)}}"></p>
-                <div id="mmenu-user-content">
-                    <div class="muser-content">
-                        {% if app.user.roles is iterable %}
-                            {% for role in app.user.roles %}
-                                {% if role == 'ROLE_SUPER_ADMIN' or role == 'ROLE_MODERATOR' %}
-                                    <a href="{{ path('sonata_admin_dashboard') }}">
-                                        <i class="fa fa-medkit" aria-hidden="true"></i>
-                                        Admin room
-                                    </a>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-                        <a href="{{ path('fos_user_profile_show') }}">Show</a>
-                        <a href="{{ path('fos_user_profile_edit') }}">Edit</a>
-                        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
-                    </div>
-                </div>
-            {% else %}
-                <p class="user-title">Login or Register</p>
-                <div id="mmenu-user-content">
-                    <div class="muser-content">
-                        {{ render(controller('MainBundle:Security:loginMenu')) }}
-                    </div>
-                </div>
-            {% endif %}
-        </div>
+  <div class="mmenu-container">
+    <div class="mmenu-navigation">
+      {{ knp_menu_render('MainBundle:Builder:mainMenu') }}
     </div>
+    <div id="mmenu-user" class="mmenu-user">
+      {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        <div class="user-info">
+          <p class="user-title">{{ app.user.username }}</p>
+          <img class="user-img" src="{{ asset('user_images/' ~ app.user.img) }}"/>
+        </div>
+        <div id="mmenu-user-content">
+          <div class="muser-content">
+            {% if app.user.roles is iterable %}
+              {% for role in app.user.roles %}
+                {% if role == 'ROLE_SUPER_ADMIN' or role == 'ROLE_MODERATOR' %}
+                  <a href="{{ path('sonata_admin_dashboard') }}">
+                    <i class="fa fa-medkit" aria-hidden="true"></i>
+                    Admin room
+                  </a>
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+            <a href="{{ path('fos_user_profile_show') }}">Show</a>
+            <a href="{{ path('fos_user_profile_edit') }}">Edit</a>
+            <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+          </div>
+        </div>
+      {% else %}
+        <div class="user-info">
+          <p class="user-title-no">Login or Register</p>
+        </div>
+        <div id="mmenu-user-content">
+          <div class="muser-content">
+            {{ render(controller('MainBundle:Security:loginMenu')) }}
+          </div>
+        </div>
+      {% endif %}
+    </div>
+  </div>
 </div>
