complite style mmenu section

--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -26,9 +26,7 @@
     <div class="user-action">
         <input type="submit" id="_submit" name="_submit" value="Login"/>
 
-        or
-
-        <a href="{{ path('fos_user_registration_register') }}">
+        <a class="button-default" href="{{ path('fos_user_registration_register') }}">
             Register
         </a>
     </div>
