--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,5 +1,6 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
+  {{ wo_render_breadcrumbs() }}
   {% include "FOSUserBundle:Security:login_content.html.twig" %}
 {% endblock fos_user_content %}
