need add breadcrumbs for /change-password page

--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -1,5 +1,7 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
+    Test controller
+    {{ wo_render_breadcrumbs() }}
 {% include "FOSUserBundle:ChangePassword:change_password_content.html.twig" %}
 {% endblock fos_user_content %}
