--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends "MainBundle::base.html.twig" %}
 
 {% block body %}
-    <div class="user-content">
+    <div id="user-content" class="user-content">
         <div class="container-susy">
             {#<div>#}
             {#{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}#}
