--- a/web/assets/src/scss/variables/mixins/_button.scss
+++ b/web/assets/src/scss/variables/mixins/_button.scss
@@ -1,25 +1,25 @@
-@mixin button-active($c:$white, $c-hover:$black-light, $bc:inherit, $bc-hover:$black-light, $fs:14px, $br:rem(5px)) {
+@mixin button-active($c:$white, $c-hover:$white, $bc:inherit, $bc-hover:$black-light, $fs:$fs) {
   color: $c;
   background-color: $bc;
   padding: rem(15px) rem(30px);
   font-size: $fs;
   border: rem(1px) solid $black-light;
-  border-radius: $br;
+  border-radius: rem(10px);
 
   &:hover {
-    color: $c;
+    color: $c-hover;
     background-color: $bc-hover;
     text-decoration: none;
   }
 }
 
-@mixin button-default($c:$white, $c-hover:$black-light, $bc:$black-light, $bc-hover:inherit, $fs:14px, $br:rem(5px)) {
+@mixin button-default($c:$white, $c-hover:$black-light, $bc:$black-light, $bc-hover:inherit, $fs:$fs) {
   color: $c;
   background-color: $bc;
   padding: rem(15px) rem(30px);
   font-size: $fs;
   border: rem(1px) solid $bc;
-  border-radius: $br;
+  border-radius: rem(10px);
 
   &:hover{
     color: $c;
