--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,5 +2,5 @@
 
 {% block fos_user_content %}
   {{ wo_render_breadcrumbs() }}
-  {% include "FOSUserBundle:Security:login_content.html.twig" %}
+  {% include "FOSUserBundle:Security:login_page_content.html.twig" %}
 {% endblock fos_user_content %}
