--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -3,6 +3,6 @@
 {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
     {{ form_widget(form) }}
     <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+        <input class="waves-effect waves-light btn active" type="submit" value="{{ 'change_password.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
