--- a/src/MainBundle/Resources/views/Main/_style.html.twig
+++ b/src/MainBundle/Resources/views/Main/_style.html.twig
@@ -2,4 +2,5 @@
 <link rel="stylesheet" href="{{ asset('assets/assets/lib/bootstrap/css/bootstrap.min.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/assets/lib/font-awesome/css/font-awesome.min.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/assets/lib/mmenu/jquery.mmenu.all.css') }}">
+<link rel="stylesheet" href="{{ asset('assets/assets/lib/materialize/css/materialize.min.css') }}">
 <link rel="stylesheet" href="{{ asset('assets/assets/css/main.min.css') }}">
