--- a/web/assets/src/scss/Component/_base.scss
+++ b/web/assets/src/scss/Component/_base.scss
@@ -13,20 +13,19 @@ body {
 
 // Form style.
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 rem(50px) $white inset; /* Change the color to your own background color */
+  -webkit-box-shadow: 0 0 0 rem(50px) $white inset;
 }
 
 input:-webkit-autofill:focus {
-  -webkit-box-shadow: $white/*your box-shadow*/
-  , 0 0 0 rem(50px) $white inset;
+  -webkit-box-shadow: $white, 0 0 0 rem(50px) $white inset;
 }
 
-input{
+input {
   color: $black-light;
 }
 
 // Text Style.
-p{
+p {
   margin: 0;
   padding: 0;
 }
@@ -35,3 +34,84 @@ p{
 a:hover {
   cursor: pointer;
 }
+
+// Materialize buttons
+// add classes
+// input = waves-effect waves-light btn-largel
+// parent div = input-field
+.btn {
+  background: $black-light;
+
+  &:hover {
+	background: lighten($black-light, 10%);
+  }
+}
+
+.input-field {
+  margin-top: 0;
+}
+
+input:not([type]),
+input[type=text],
+input[type=password],
+input[type=email],
+input[type=url],
+input[type=time],
+input[type=date],
+input[type=datetime],
+input[type=datetime-local],
+input[type=tel],
+input[type=number],
+input[type=search],
+textarea.materialize-textarea{
+  height:auto;
+  padding: rem(15px) 0;
+  background: transparent;
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
+  border-bottom: 1px solid $blue;
+  box-shadow: 0 1px 0 0 $blue;
+}
+
+input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime].valid, input[type=datetime]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid{
+  border-bottom: 1px solid $blue;
+  box-shadow: 0 1px 0 0 $blue;
+}
+
+[type="checkbox"]:checked+label:before{
+  border-right: 2px solid $blue;
+  border-bottom: 2px solid $blue;
+}
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill{
+  color: pink !important;
+}
+
+///* label color */
+//.input-field label {
+//  color: #000;
+//}
+///* label focus color */
+//.input-field input[type=text]:focus + label {
+//  color: #000;
+//}
+///* label underline focus color */
+//.input-field input[type=text]:focus {
+//  border-bottom: 1px solid #000;
+//  box-shadow: 0 1px 0 0 #000;
+//}
+///* valid color */
+//.input-field input[type=text].valid {
+//  border-bottom: 1px solid #000;
+//  box-shadow: 0 1px 0 0 #000;
+//}
+///* invalid color */
+//.input-field input[type=text].invalid {
+//  border-bottom: 1px solid #000;
+//  box-shadow: 0 1px 0 0 #000;
+//}
+///* icon prefix focus color */
+//.input-field .prefix.active {
+//  color: #000;
+//}
