--- a/web/assets/src/scss/variables/_color.scss
+++ b/web/assets/src/scss/variables/_color.scss
@@ -8,6 +8,7 @@ $black: #000000;
 $blue: #039be5;
 
 //background colors
-$black-light: #243238;
+$black-light: #2f2f2f;
+$black-dark: #0f0f0f;
 $blue-light: #3D525B;
 $white-coffee: #f1f1f1;
