--- a/src/MainBundle/Resources/views/SonataAdminBundle/AdminPanel/user_list_fields.html.twig
+++ b/src/MainBundle/Resources/views/SonataAdminBundle/AdminPanel/user_list_fields.html.twig
@@ -3,7 +3,11 @@
 {% block field %}
     <div class="admin-panel-content-image">
         {% if object.img != null %}
-            <img src="{{ asset('user_images/' ~ object.img ) }}">
+            {% if object.img starts with 'http' %}
+                <img src="{{ asset(object.img ) }}">
+            {% else %}
+                <img src="{{ asset('user_images/' ~ object.img ) }}">
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
