--- a/src/MainBundle/Resources/views/Page/_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_blog.html.twig
@@ -1,11 +1,93 @@
 {% extends "MainBundle::base.html.twig" %}
 
 {% block body %}
-    <div class="blog-container">
-        <div class="blog-breadcrumbs">
-            {{ wo_render_breadcrumbs() }}
-        </div>
-        <div class="blog-content">Blog content</div>
-        <div class="blog-navigation">Blog navigation</div>
+  <div class="blog-container">
+    <div class="blog-breadcrumbs">
+      {{ wo_render_breadcrumbs() }}
     </div>
+    {% block bodyContent %}
+      <div class="blog-content">
+        {% for post in posts.items %}
+          {% if post.postImg is not empty %}
+            <div class="blog-item-img">
+              <div class="blog-category">
+                <a href="">{{ post.category.name }}</a>
+              </div>
+              <div class="blog-img">
+                <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }} ">
+                  <img src="{{ post.postImg }}" alt="{{ post.shortTitle }}"/>
+                </a>
+              </div>
+              <div class="body-title">
+                <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
+                  <h2>{{ post.shortTitle }}</h2>
+                </a>
+              </div>
+              <div class="body-descriptions">
+                <h2>{{ post.shortDescriptions }}</h2>
+              </div>
+              <div class="body-footer">
+                <div class="body-footer-user">
+                  <p>
+                    <img src="/user_images/{{ post.user.img }}" alt="{{ post.user.username }}">
+                    {{ post.user.username }}
+                  </p>
+                </div>
+                <div class="body-footer-date">
+                  <p>
+                    {{ post.postDate | date("M d") }}
+                  </p>
+                </div>
+                <div class="body-footer-teg">
+                  {% for tag in post.tag %}
+                    <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          {% else %}
+            <div class="blog-item-no-img">
+              <div class="blog-category">
+                <a href="">{{ post.category.name }}</a>
+              </div>
+              <div class="body-title">
+                <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
+                  <h2>{{ post.shortTitle }}</h2>
+                </a>
+              </div>
+              <div class="body-descriptions">
+                <h2>{{ post.shortDescriptions }}</h2>
+              </div>
+              <div class="body-footer">
+                <div class="body-footer-user">
+                  <p>
+                    <img src="/user_images/{{ post.user.img }}" alt="{{ post.user.username }}">
+                    {{ post.user.username }}
+                  </p>
+                </div>
+                <div class="body-footer-date">
+                  <p>
+                    {{ post.postDate | date("M d") }}
+                  </p>
+                </div>
+                <div class="body-footer-teg">
+                  {% for tag in post.tag %}
+                    <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          {% endif %}
+        {% endfor %}
+
+        <div class="navigation text-center">
+          {{ knp_pagination_render(posts) }}
+        </div>
+      </div>
+    {% endblock %}
+
+    {% block bodyNavigation %}
+      <div class="blog-navigation">Blog navigation</div>
+    {% endblock %}
+  </div>
 {% endblock %}
