--- a/src/MainBundle/Resources/views/Page/_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_blog.html.twig
@@ -9,10 +9,7 @@
       <div class="blog-content">
         {% for post in posts.items %}
           {% if post.postImg is not empty %}
-            <div class="blog-item-img">
-              <div class="blog-category">
-                <a href="">{{ post.category.name }}</a>
-              </div>
+            <div class="blog-item blog-item-img">
               <div class="blog-img">
                 <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }} ">
                   <img src="{{ post.postImg }}" alt="{{ post.shortTitle }}"/>
@@ -20,11 +17,14 @@
               </div>
               <div class="body-title">
                 <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-                  <h2>{{ post.shortTitle }}</h2>
+                  {{ post.shortTitle }}
                 </a>
               </div>
               <div class="body-descriptions">
-                <h2>{{ post.shortDescriptions }}</h2>
+                <p>{{ post.shortDescriptions }}</p>
+              </div>
+              <div class="body-readmore">
+                <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">Read More</a>
               </div>
               <div class="body-footer">
                 <div class="body-footer-user">
@@ -38,25 +38,28 @@
                     {{ post.postDate | date("M d") }}
                   </p>
                 </div>
+                <div class="blog-footer-category">
+                  <a href="">{{ post.category.name }}</a>
+                </div>
                 <div class="body-footer-teg">
                   {% for tag in post.tag %}
-                    <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                    <a href="#">#{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                   {% endfor %}
                 </div>
               </div>
             </div>
           {% else %}
-            <div class="blog-item-no-img">
-              <div class="blog-category">
-                <a href="">{{ post.category.name }}</a>
-              </div>
+            <div class="blog-item blog-item-no-img">
               <div class="body-title">
                 <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-                  <h2>{{ post.shortTitle }}</h2>
+                  {{ post.shortTitle }}
                 </a>
               </div>
               <div class="body-descriptions">
-                <h2>{{ post.shortDescriptions }}</h2>
+                <p>{{ post.shortDescriptions }}</p>
+              </div>
+              <div class="body-readmore">
+                <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">Read More</a>
               </div>
               <div class="body-footer">
                 <div class="body-footer-user">
@@ -70,22 +73,23 @@
                     {{ post.postDate | date("M d") }}
                   </p>
                 </div>
+                <div class="blog-footer-category">
+                  <a href="">{{ post.category.name }}</a>
+                </div>
                 <div class="body-footer-teg">
                   {% for tag in post.tag %}
-                    <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+                    <a href="#">#{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                   {% endfor %}
                 </div>
               </div>
             </div>
           {% endif %}
         {% endfor %}
-
         <div class="navigation text-center">
           {{ knp_pagination_render(posts) }}
         </div>
       </div>
     {% endblock %}
-
     {% block bodyNavigation %}
       <div class="blog-navigation">Blog navigation</div>
     {% endblock %}
