--- a/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
@@ -4,10 +4,7 @@
 
   <div class="blog-content">
     {% if post.postImg is not empty %}
-      <div class="blog-item-img">
-        <div class="blog-category">
-          <a href="">{{ post.category.name }}</a>
-        </div>
+      <div class="blog-item blog-item-img">
         <div class="blog-img">
           <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }} ">
             <img src="{{ post.postImg }}" alt="{{ post.shortTitle }}"/>
@@ -15,11 +12,11 @@
         </div>
         <div class="body-title">
           <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-            <h2>{{ post.longTitle }}</h2>
+            {{ post.longTitle }}
           </a>
         </div>
         <div class="body-descriptions">
-          <h2>{{ post.longDescriptions }}</h2>
+          <p>{{ post.longDescriptions }}</p>
         </div>
         <div class="body-footer">
           <div class="body-footer-user">
@@ -33,25 +30,25 @@
               {{ post.postDate | date("M d") }}
             </p>
           </div>
+          <div class="blog-footer-category">
+            <a href="">{{ post.category.name }}</a>
+          </div>
           <div class="body-footer-teg">
             {% for tag in post.tag %}
-              <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+              <a href="#">#{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
             {% endfor %}
           </div>
         </div>
       </div>
     {% else %}
-      <div class="blog-item-no-img">
-        <div class="blog-category">
-          <a href="">{{ post.category.name }}</a>
-        </div>
+      <div class="blog-item blog-item-no-img">
         <div class="body-title">
           <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-            <h2>{{ post.longTitle }}</h2>
+            {{ post.longTitle }}
           </a>
         </div>
         <div class="body-descriptions">
-          <h2>{{ post.longDescriptions }}</h2>
+          <p>{{ post.longDescriptions }}</p>
         </div>
         <div class="body-footer">
           <div class="body-footer-user">
@@ -65,9 +62,12 @@
               {{ post.postDate | date("M d") }}
             </p>
           </div>
+          <div class="blog-footer-category">
+            <a href="">{{ post.category.name }}</a>
+          </div>
           <div class="body-footer-teg">
             {% for tag in post.tag %}
-              <a href="#">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
+              <a href="#">#{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
             {% endfor %}
           </div>
         </div>
