--- a/web/assets/src/scss/Page/_blog.scss
+++ b/web/assets/src/scss/Page/_blog.scss
@@ -72,12 +72,24 @@
 
     .body-footer-user,
     .body-footer-date,
-    .blog-footer-category{
+    .blog-footer-category,
+	.body-footer-teg{
+	  vertical-align: middle;
       display: inline-block;
+	  padding-right: rem(25px);
+	  color: $grey;
+	  
+	  a{
+		color: $grey;
+	  }
     }
 
     .body-footer-user{
 
+	  img{
+		max-width: rem(32px);
+		max-height: rem(32px);
+	  }
     }
 
     .body-footer-date{
