add all categories in blog page, and add internall for all cat.

--- a/src/MainBundle/Resources/views/base.html.twig
+++ b/src/MainBundle/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
 
 {# Body top #}
 {% block body_top %}
-    {% include "MainBundle:Component:mainmenu.html.twig" %}
+    {% include "MainBundle:Component:_mainmenu.html.twig" %}
 {% endblock %}
 
 {# Body center #}
@@ -25,7 +25,7 @@
 
 {# Body footer #}
 {% block body_bottom %}
-    {% include "MainBundle:Component:footer.html.twig" %}
+    {% include "MainBundle:Component:_footer.html.twig" %}
 {% endblock %}
 
 {# for FosUserBundle #}
