--- a/web/assets/src/scss/Page/_blog.scss
+++ b/web/assets/src/scss/Page/_blog.scss
@@ -1,103 +1,110 @@
-.blog-container{
+.blog-container {
   @extend .container-susy;
 
-  .blog-content{
+  .blog-content {
 	@include span(9 of 12);
   }
 
-  .blog-navigation{
+  .blog-navigation {
 	@include span(last 3 of 12);
   }
 
-  .blog-item{
-    margin-bottom: rem(55px);
-    position: relative;
+  // Content.
 
-    .blog-img,
-    .body-title,
-    .body-descriptions,
-    .body-readmore,
-    .body-footer
-    {
-      padding-bottom: rem(15px);
-    }
+  .blog-item {
+	margin-bottom: rem(55px);
+	position: relative;
 
-    .blog-img{
+	.blog-img,
+	.body-title,
+	.body-descriptions,
+	.body-readmore,
+	.body-footer {
+	  padding-bottom: rem(15px);
+	}
 
-      img{
-        width: 100%;
-      }
-    }
+	.blog-img {
 
-    .body-title{
+	  img {
+		width: 100%;
+	  }
+	}
 
-      a{
-        font-size: 24px;
-        color: $black-light;
-        text-transform: uppercase;
-      }
-    }
+	.body-title {
 
-    .body-descriptions{
-      color: $grey;
-    }
+	  a {
+		font-size: 24px;
+		color: $black-light;
+		text-transform: uppercase;
+	  }
+	}
 
-    .body-readmore{
-      text-align: right;
+	.body-descriptions {
+	  color: $grey;
+	}
 
-      a{
-        position: relative;
-        padding-right: rem(25px);
-        display: block;
-        text-transform: uppercase;
-        color: $grey;
-        font-size: 14px;
+	.body-readmore {
+	  text-align: right;
 
-        &:hover{
-          text-decoration: none;
-        }
+	  a {
+		position: relative;
+		padding-right: rem(25px);
+		display: block;
+		text-transform: uppercase;
+		color: $grey;
+		font-size: 14px;
 
-        &:before{
-          content:'';
-          position: absolute;
-          top: 50%;
-          right: 0;
-          transform: translateY(-50%);
-          width: rem(22px);
-          height: rem(1px);
-          background-color: $grey;
-        }
-      }
-    }
+		&:hover {
+		  text-decoration: none;
+		}
 
-    .body-footer-user,
-    .body-footer-date,
-    .blog-footer-category,
-	.body-footer-teg{
+		&:before {
+		  content: '';
+		  position: absolute;
+		  top: 50%;
+		  right: 0;
+		  transform: translateY(-50%);
+		  width: rem(22px);
+		  height: rem(1px);
+		  background-color: $grey;
+		}
+	  }
+	}
+
+	.body-footer-user,
+	.body-footer-date,
+	.blog-footer-category,
+	.body-footer-teg {
 	  vertical-align: middle;
-      display: inline-block;
+	  display: inline-block;
 	  padding-right: rem(25px);
 	  color: $grey;
-	  
-	  a{
+
+	  a {
 		color: $grey;
 	  }
-    }
+	}
 
-    .body-footer-user{
+	.body-footer-user {
 
-	  img{
+	  img {
 		max-width: rem(32px);
 		max-height: rem(32px);
 	  }
-    }
+	}
+  }
 
-    .body-footer-date{
+  // Navigation
+  .blog-navigation{
 
-    }
+	.blog-search,
+	.blog-category,
+	.blog-teg{
+	  margin-bottom: rem(30px);
 
-    .body-footer-teg{
-
-    }
+	  .blog-nav-title{
+		text-transform: uppercase;
+	  }
+	}
   }
 }
