add internall page for tag, and sellect all in navigation

--- a/src/MainBundle/Resources/views/Component/_navigation.html.twig
+++ b/src/MainBundle/Resources/views/Component/_navigation.html.twig
@@ -8,5 +8,6 @@
     </div>
     <div class="blog-teg">
         <p class="blog-nav-title">Tags</p>
+        {{ render(controller('MainBundle:Main:showTag')) }}
     </div>
 </div>
