--- a/web/assets/src/scss/Component/_base.scss
+++ b/web/assets/src/scss/Component/_base.scss
@@ -125,30 +125,15 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   color: pink !important;
 }
 
-///* label color */
-//.input-field label {
-//  color: #000;
-//}
-///* label focus color */
-//.input-field input[type=text]:focus + label {
-//  color: #000;
-//}
-///* label underline focus color */
-//.input-field input[type=text]:focus {
-//  border-bottom: 1px solid #000;
-//  box-shadow: 0 1px 0 0 #000;
-//}
-///* valid color */
-//.input-field input[type=text].valid {
-//  border-bottom: 1px solid #000;
-//  box-shadow: 0 1px 0 0 #000;
-//}
-///* invalid color */
-//.input-field input[type=text].invalid {
-//  border-bottom: 1px solid #000;
-//  box-shadow: 0 1px 0 0 #000;
-//}
-///* icon prefix focus color */
-//.input-field .prefix.active {
-//  color: #000;
-//}
+// Tags
+.block-tags{
+
+  li{
+	display: inline-block;
+	
+	.chip{
+	  background-color: $black-light;
+	  color: $white;
+	}
+  };
+}
