--- a/src/MainBundle/Resources/views/Component/_navigation.html.twig
+++ b/src/MainBundle/Resources/views/Component/_navigation.html.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="blog-category">
         <p class="blog-nav-title">Categories</p>
-        {{ render(controller('MainBundle:Main:showCategory')) }}
+        {#{{ render(controller('MainBundle:Main:showCategory')) }}#}
     </div>
     <div class="blog-teg">
         <p class="blog-nav-title">Tags</p>
